# poise-bot-template

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/util/: ping.rs
src/events/: mod.rs  ready.rs
