[package]
name = "poise-bot-template"
authors = ["JackSkelt"]
license = "MIT"
repository = "https://github.com/D4v3sb/poise-bot-template"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.5.5"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
log = "0.4.19"
env_logger = "0.10.0"
